--- a/entrega4/informe/usuario.tex
+++ b/entrega4/informe/usuario.tex
@@ -440,13 +440,17 @@ Existe el caso especial de los parámetros por referencia, en el cual los parámet
 
 
 
-\section{Sentencias Compuestas}
+\section{Sentencias Estructuradas}
 
-Las sentencias compuestas pueden ser una suceción de otras sentencias, agrupadas entre delimitadores; sentencias condicionales (\texttt{})
+Las sentencias compuestas pueden ser una suceción de otras sentencias, agrupadas entre delimitadores; sentencias condicionales (\texttt{if}), o sentencias repetitivas(en Mini-Pascal sólo se cuenta con el\texttt{while}).
 
 \begin{verbatim}
 <structured statement> ::= <compound statement> | <conditional statement> | <repetitive statement>
 \end{verbatim}
+
+\subsection{Sentencias Compuestas}
+
+
 
 \section{Declaraciones}
 
